css table home page

--- a/guides/IG-RL-sviluppo/styles/RL-css/master.html
+++ b/guides/IG-RL-sviluppo/styles/RL-css/master.html
@@ -98,11 +98,11 @@
                            <td class="no-border"><span><b>FHIR version:</b> {{ guide-fhir-version }}</span></td>
                         </tr> 
                     </table>
-                    <table width="100%">
-                        <tr>
-                            <td><a href="https://simplifier.net/rlfhir">Simplifier project</a></td>
-                            <td> | </td>
-                            <td><a href="https://">Version history</a></td>
+                    <table class="no-border" width="100%">
+                        <tr class="no-border">
+                            <td class="no-border"><a href="https://simplifier.net/rlfhir">Simplifier project</a></td>
+                            <td class="no-border"> | </td>
+                            <td class="no-border"><a href="https://">Version history</a></td>
                         </tr>
                     </table>
                 </div>
