--- a/guides/IG-RL-sviluppo/styles/RL-css/master.html
+++ b/guides/IG-RL-sviluppo/styles/RL-css/master.html
@@ -95,7 +95,7 @@
                            <td class="no-border"> | </td>
                            <td class="no-border"><span><b>IG version:</b> {{ guide-version }}</span></td>
                            <td class="no-border"> | </td>
-                           <td class="no-border"><span><b>FHIR version:</b> {{ guide-fhir-version }}</span></td>
+                           <td class="no-border"><span><b>FHIR version:</b> <a href="http://hl7.org/fhir/R4/index.html">{{ guide-fhir-version }}</a> </span></td>
                         </tr> 
                     </table>
                     <table class="no-border" width="100%">
