--- a/guides/IG-RL-sviluppo/styles/RL-css/master.html
+++ b/guides/IG-RL-sviluppo/styles/RL-css/master.html
@@ -102,7 +102,7 @@
                         <tr class="no-border">
                             <td class="no-border"><a href="https://simplifier.net/rlfhir">Simplifier project</a></td>
                             <td class="no-border"> | </td>
-                            <td class="no-border"><a href="https://">Version history</a></td>
+                            <td class="no-border"><a href="https://simplifier.net/guide/ig-rlfhir-versionhistory/home?version=current">Version history</a></td>
                         </tr>
                     </table>
                 </div>
