--- a/guides/IG-RL-sviluppo/styles/RL-css/master.html
+++ b/guides/IG-RL-sviluppo/styles/RL-css/master.html
@@ -100,6 +100,8 @@
                     </table>
                     <table class="no-border" width="100%">
                         <tr class="no-border">
+                            <td class="no-border">Data ultimo aggiornamento: 01/02/2023</td>
+                            <td class="no-border"> | </td
                             <td class="no-border"><a href="https://simplifier.net/rlfhir">Simplifier project</a></td>
                             <td class="no-border"> | </td>
                             <td class="no-border"><a href="https://simplifier.net/guide/ig-rlfhir-versionhistory/home?version=current">Version history</a></td>
