--- a/guides/IG-RL-sviluppo/styles/RL-css/master.html
+++ b/guides/IG-RL-sviluppo/styles/RL-css/master.html
@@ -98,9 +98,9 @@
                            <td class="no-border"><span><b>FHIR version:</b> <a href="http://hl7.org/fhir/R4/index.html">{{ guide-fhir-version }}</a> </span></td>
                         </tr> 
                     </table>
-                    <table class="no-border" width="100%">
+                    <table class="intestazione no-border" width="100%">
                         <tr class="no-border">
-                            <td class="no-border">Data ultimo aggiornamento: 01/02/2023</td>
+                            <td class="no-border"> Data ultimo aggiornamento: 01/02/2023</td>
                             <td class="no-border"> | </td
                             <td class="no-border"><a href="https://simplifier.net/rlfhir">Simplifier project</a></td>
                             <td class="no-border"> | </td>
