--- a/guides/IG-RL-draft/styles/RL-css/master.html
+++ b/guides/IG-RL-draft/styles/RL-css/master.html
@@ -98,11 +98,13 @@
                            <td class="no-border"><span><b>FHIR version:</b> <a href="http://hl7.org/fhir/R4/index.html">{{ guide-fhir-version }}</a> </span></td>
                         </tr> 
                     </table>
-                    <table class="no-border" width="100%">
+                    <table class="intestazione no-border" width="100%">
                         <tr class="no-border">
+                            <td class="no-border"> Data ultimo aggiornamento: 01/02/2023</td>
+                            <td class="no-border"> | </td>
                             <td class="no-border"><a href="https://simplifier.net/rlfhir">Simplifier project</a></td>
                             <td class="no-border"> | </td>
-                            <td class="no-border"><a href="https://">Version history</a></td>
+                            <td class="no-border"><a href="https://simplifier.net/guide/ig-rlfhir-versionhistory/home?version=current">Version history</a></td>
                         </tr>
                     </table>
                 </div>
