--- a/guides/IG-FHIR-per-Movimentazione-Paziente-Sviluppo/styles/RL-css/master.html
+++ b/guides/IG-FHIR-per-Movimentazione-Paziente-Sviluppo/styles/RL-css/master.html
@@ -53,7 +53,7 @@
                         <td class="no-border">
                          <div class="col-md-4">
                              <a href="https://www.siss.regione.lombardia.it/wps/portal/site/siss">
-                             <img src="{{content}}/{{style-folder}}/logo-siss.jpg"  alt="logo Regione Lombardia" width="170" >
+                             <img src="{{content}}/{{style-folder}}/logo-ARIA.png"  alt="logo Regione Lombardia" width="170" >
                         </div>
                         </td>
                         <td class="no-border">
